--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 Hello World
 
-test
-
-was kann man hier so machen??!
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
