--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Danke für die vielen Glückwünsche</h1>
+<h2>Ich bin grade aufm Golfplatz. Rufe euch aber zurück. Bussi </h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
