--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body>
 <h1>Danke für die vielen Glückwünsche</h1>
 <h2>Ich bin grade aufm Golfplatz. Rufe euch aber zurück. Bussi </h2>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Grüüüüße Ludger </p>
 </body>
 </html>
