--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h1>Danke für die vielen Glückwünsche</h1>
-<h2>Ich bin grade aufm Golfplatz. Rufe euch aber zurück. Bussi </h2>
-<p>Grüüüüße Ludger </p>
+<h2> Rufe euch zurück. Bussi </h2>
+<p>Grüüüüße </p>
 </body>
 </html>
